# boids.py

./: .gitignore  logbook.json  pyproject.toml
main/: AIBoid.py  ai_boid.py  boid.py  constants.py  evaluating.py  main.ipynb  main.py  network.py  obstacle.py  regular.py  testing.py  training.py
